Kubernetes-4-basics-v4/Kubernetes/network-policy/db-allow-only-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-only-backend
  namespace: shopsphere
spec:
  podSelector:
    matchLabels:
      app: db # Target: Apply this rule to the DB pod
  policyTypes:
    - Ingress # We are restricting INCOMING traffic
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend # Condition: Only allow pods with this label
        # - podSelector:
        #     matchLabels:
        #       app.kubernetes.io/component: migration # Condition: Allow migration pods to access the DB
      ports:
        - protocol: TCP
          port: 3306 # Secure Port: MySQL default
